<resources>
    <string name="app_name">La_Dominguita</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Nombre_Usuario">Nombre Usuario</string>
    <string name="CorreoUpao">Jara@upao.edu.pe</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Salir">Salir de la cuenta</string>
    <string name="regresar">regresar</string>
    <string name="regresar_1">regresar</string>
    <string name="Inicio">La Dominguita APP</string>
    <string name="buscar">buscar</string>
    <string name="anterior">anterior</string>
    <string name="siguiente">siguiente</string>
    <string name="carrito">carrito</string>
    <string name="historial">historial</string>
    <string name="eliminar_producto">Eliminar producto</string>
    <string name="disminuir_cantidad">Disminuir cantidad</string>
    <string name="aumentar_cantidad">Aumentar cantidad</string>
    <string name="product_image_description">Descripcion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="historial_compras">Historial de Compras</string>
    <string name="no_compras_registradas">No hay compras registradas.</string>
    <string name="descargar_boleta">Descargar Boleta</string>
</resources>