<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="vertical"
    android:background="#F0F0F0">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#432534"
        android:padding="16dp"
        android:elevation="4dp">

        <!-- Imagen del producto -->
        <ImageView
            android:id="@+id/imgProducto"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/producto" />

        <!-- Botón para eliminar el producto -->
        <ImageButton
            android:id="@+id/btnEliminarProducto"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_delete"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/eliminar_producto" />

        <!-- Nombre del producto -->
        <TextView
            android:id="@+id/tvNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgProducto"
            android:layout_alignTop="@id/imgProducto"
            android:text="Nombre Del Producto"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"/>

        <!-- Precio del producto -->
        <TextView
            android:id="@+id/tvEtiquetaPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Precio: "
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_toRightOf="@id/imgProducto"
            android:layout_below="@id/tvNombreProducto"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S/.24"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_toRightOf="@id/tvEtiquetaPrecio"
            android:layout_alignBaseline="@id/tvEtiquetaPrecio"
            android:layout_marginLeft="5dp"/>

        <!-- Contenedor para los controles de cantidad -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_toRightOf="@id/imgProducto"
            android:layout_below="@id/tvPrecio"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp">

            <ImageButton
                android:id="@+id/btnDecrease"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_menu_revert"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/disminuir_cantidad"/>

            <EditText
                android:id="@+id/edtCantidad"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:inputType="number"
                android:text="1"
                android:textSize="12sp"
                android:gravity="center"
                android:maxLength="3"
                android:focusable="false"
                android:cursorVisible="false"/>


            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@android:drawable/ic_input_add"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/aumentar_cantidad"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
